8261262: Kitchensink24HStress.java crashed with EXCEPTION_ACCESS_VIOLATION Reviewed-by: dcubed, sspitsyn

(cherry picked from commit 6a6ae5c6ed9ac7be1f7b936a39533ef3c9558ecc)